Use real html and add links

--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-There is nothing here.
+<!DOCTYPE html>
+
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="author" content="David Pape" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <base target="_blank" />
+    <style>
+      body { color: black; background-color: white; font-family: sans-serif; text-align: center; }
+      a { color: black; text-decoration: underline; }
+    </style>
+    <title>Home</title>
+  </head>
+  <body>
+    <header>
+    </header>
+    <main>
+      <p>There is nothing here. Click any of the links below.</p>
+    </main>
+    <footer>
+      <a href="https://github.com/zyzzyxdonta">GitHub</a>
+      &middot;
+      <a href="https://gitlab.com/zyzzyxdonta">GitLab</a>
+    </footer>
+  </body>
+</html>
