--- a/index.html
+++ b/index.html
@@ -1,27 +1,53 @@
 <!DOCTYPE html>
 
 <html>
+
   <head>
     <meta charset="UTF-8" />
     <meta name="author" content="David Pape" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base target="_blank" />
     <style>
-      body { color: black; background-color: white; font-family: sans-serif; text-align: center; }
-      a { color: black; text-decoration: underline; }
+
+      * {
+        color: black;
+        background-color: white;
+        text-decoration: none;
+        font-family: serif;
+        font-size: large;
+        text-align: center;
+        margin: 10px 0 10px 0;
+        padding: 0;
+      }
+
+      a {
+        text-decoration: underline;
+      }
+
+      .footer-link+.footer-link::before {
+        content: "\0a\b7\0a";   /*  &middot;  */
+      }
+
     </style>
     <title>Home</title>
   </head>
+
   <body>
+
+    <!--
     <header>
     </header>
+    -->
+
     <main>
-      <p>There is nothing here. Click any of the links below.</p>
+      There is nothing here. Click any of the links below.
     </main>
+
     <footer>
-      <a href="https://github.com/zyzzyxdonta">GitHub</a>
-      &middot;
-      <a href="https://gitlab.com/zyzzyxdonta">GitLab</a>
+      <span class="footer-link"><a href="https://github.com/zyzzyxdonta">GitHub</a></span>
+      <span class="footer-link"><a href="https://gitlab.com/zyzzyxdonta">GitLab</a></span>
     </footer>
+
   </body>
+
 </html>
