--- a/index.html
+++ b/index.html
@@ -16,8 +16,17 @@
         font-family: serif;
         font-size: large;
         text-align: center;
-        margin: 10px 0 10px 0;
+        margin: 0;
         padding: 0;
+      }
+
+      body {
+        max-width: 500px;
+        margin: auto;
+      }
+
+      header, main, footer {
+        margin: 10px 0 10px 0;
       }
 
       a {
